# axum-seaorm

./: .env  Cargo.toml  docker-compose.yml  openapi.json
api/: Cargo.toml
api/src/: book.rs  error.rs  handlers.rs  lib.rs  publisher.rs  shop.rs
api/src/handlers/: book.rs  publisher.rs
domain/: Cargo.toml
domain/book/: Cargo.toml
domain/book/src/: lib.rs  vo.rs
domain/publisher/: Cargo.toml
domain/publisher/src/: lib.rs  vo.rs
domain/shop/: Cargo.toml
domain/shop/src/: lib.rs  vo.rs
domain/src/: book.rs  error.rs  interfaces.rs  lib.rs  models.rs  publisher.rs
domain/src/interfaces/: book.rs  publisher.rs
domain/src/models/: book.rs  publisher.rs
infra/: Cargo.toml
infra/src/: book.rs  book_history.rs  lib.rs  publisher.rs  publisher_history.rs  shop.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  repositories.rs
infrastructure/src/entities/: book.rs  publisher.rs
infrastructure/src/repositories/: book.rs  publisher.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260101_000002_add_audit_and_history.rs
src/: main.rs  test.rs
usecase/: Cargo.toml
usecase/src/: book.rs  error.rs  lib.rs  mocks.rs  publisher.rs  shop.rs
usecase/src/dtos/: book.rs  publisher.rs
usecase/src/usecases/: book.rs  publisher.rs
