[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["domain", "infrastructure", "usecase", "api"]
resolver = "2"

[dependencies]
domain = { workspace = true }
infrastructure = { workspace = true }
usecase = { workspace = true }
api = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }

[workspace.dependencies]
# Web & Async
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DB
sea-orm = { version = "2.0.0-rc", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
] }

# Internal
domain = { path = "domain" }
infrastructure = { path = "infrastructure" }
usecase = { path = "usecase" }
api = { path = "api" }

# Misc
thiserror = "2"
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
utoipa = { version = "5" }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
