[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["domain/book", "domain/publisher", "infra", "usecase", "api"]
resolver = "2"

[dependencies]
book = { workspace = true }
publisher = { workspace = true }
infra = { workspace = true, features = ["test"] }
usecase = { workspace = true }
api = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }

[workspace.dependencies]
# Web & Async
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DB
sea-orm = { version = "2.0.0-rc", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
] }

# Internal
book = { path = "domain/book" }
publisher = { path = "domain/publisher" }
infra = { path = "infra" }
usecase = { path = "usecase" }
api = { path = "api" }

# Misc
thiserror = "2"
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
utoipa = { version = "5" }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
