[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["domain/book", "domain/publisher", "infra", "usecase", "api"]
resolver = "2"

[dependencies]
book = { workspace = true }
publisher = { workspace = true }
infra = { workspace = true }
usecase = { workspace = true }
api = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
migration = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
infra = { workspace = true, features = ["test"] }


[workspace.dependencies]
# Web & Async
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# DB
sea-orm = { version = "2.0.0-rc", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
] }


# Internal
book = { path = "domain/book" }
publisher = { path = "domain/publisher" }
infra = { path = "infra" }
usecase = { path = "usecase" }
api = { path = "api" }
migration = { path = "migration" }

# Misc
thiserror = "2"
anyhow = "1.0"
dotenvy = "0.15"
async-trait = "0.1"
utoipa = { version = "5", features = ["uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
rstest = "0.26.1"
uuid = { version = "1.19.0", features = ["serde", "v4", "v7"] }
sea-orm-migration = { version = "2.0.0-rc", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
