[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
usecase = { workspace = true }
book = { workspace = true }
publisher = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
