[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]

book = { workspace = true }
publisher = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }


[features]
test = ["dep:tokio", "sea-orm/sqlx-sqlite"]
