[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { workspace = true, optional = true }
sea-orm = { workspace = true }
book = { workspace = true }
publisher = { workspace = true }
usecase = { workspace = true }
api = { workspace = true }
shop = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }


[features]
test = ["dep:tokio", "sea-orm/sqlx-sqlite"]
