[package]
name = "usecase"
version = "0.1.0"
edition = "2024"

[dependencies]
book = { workspace = true }
publisher = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
anyhow = { workspace = true }
